Adding more questions on java interview